# MGARD

examples/qoi/: CMakeLists.txt  README.md  average3d.cpp  average3d_block.cpp  average3d_block_2.cpp  average3d_block_omp.cpp
